# MCP-CLI-ARCEE

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  create_trello_board.py  integracao_mcp_guia.md  integracao_trello.md  mapa-relacoes-clusters.md  mcp_request.json  package-lock.json  package.json  plano-refatoracao.md  pyproject.toml  requirements.txt  setup.py  teste_arcee.py
MCP-SERVER/: README.md  requirements.txt
MCP-SERVER/src/: server.py
arcee_cli/: __init__.py  __main__.py
arcee_cli/agent/: arcee_agent.py
arcee_cli/application/services/: chat_service.py
arcee_cli/arcee_cli/: __init__.py  arcee_cli.py  arcee_client.py
arcee_cli/arcee_cli/domain/models/: chat_message.py
arcee_cli/commands/: __init__.py  chat.py  configure.py
arcee_cli/crew/: __init__.py  arcee_agents.py  arcee_crew.py
arcee_cli/docs/: README.md  logging.md  trello_api.md
arcee_cli/domain/interfaces/: ai_provider.py
arcee_cli/domain/memory/: entities.py  repositories.py
arcee_cli/domain/models/: chat_message.py
arcee_cli/examples/: memory_example.py  teste_arcee.py
arcee_cli/examples/mcp/: .env.example  temp_trello_lists.py  teste_trello.py
arcee_cli/examples/mcp/trello/: __init__.py  listar_listas.py  trello_example.py  trello_test.sh  trello_teste_direto.sh
arcee_cli/infrastructure/: __init__.py  config.py  logging_config.py
arcee_cli/infrastructure/mcp/: __init__.py  cursor_client.py  mcp_client.py  mcp_config.py  mcp_plugin.py  mcp_server.py  server.py
arcee_cli/infrastructure/providers/: __init__.py  arcee_provider.py  provider_factory.py
arcee_cli/infrastructure/veyrax/: memory_repository.py
arcee_cli/presentation/: cli.py
arcee_cli/scripts/: start_trello_server.sh  start_trello_server_background.sh
arcee_cli/tools/: mcpx_simple.py  trello_nl_processor.py
arcee_cli/tools/mcp/trello/: __init__.py  teste_trello.js  trello_client.py  trello_get_lists.js
scripts/: format.py  lint.py
src/: chat_arcee.py  chat_arcee_mcp.py  exceptions.py  teste_arcee.py  teste_arcee_oficial.py
src/adapters/: __init__.py  arcee_client_adapter.py  file_service_adapter.py  mcp_service_adapter.py  rest_service_adapter.py  task_service_adapter.py
src/chat/: __init__.py  chat_arcee_mcp.py  chat_history.py  chat_ui.py  command_processor.py
src/exceptions/: __init__.py
src/factories/: __init__.py  service_factory.py
src/interfaces/: __init__.py  file_service.py  llm_client.py  mcp_service.py  rest_service.py  task_service.py
src/llm/providers/: arcee_client.py
src/mcp/: integrations.py
src/veyrax/: __init__.py  veyrax_adapter.py  veyrax_integration.py
tests/: __init__.py  test_cli.py
tests/integration/: test_provider.py
tests/unit/: test_cli.py
