[project]
name = "arcee-cli"
version = "1.0.0"
description = "Interface de linha de comando para o Arcee AI"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Diego Fornalha", email = "diegofornalha@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
requires-python = ">=3.7"
dependencies = [
    "requests>=2.25.0",
    "python-dotenv>=0.15.0",
    "colorama>=0.4.4",
    "rich>=10.0.0",
    "prompt-toolkit>=3.0.20",
    "pytest>=7.0.0",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
arcee = "arcee_cli.__main__:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

